aggiunto navbar e scheletro header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,102 @@
 
 <body>
 
-    <header></header>
+    <header>
+
+        <nav>
+            <div id="fixed_nav" class="bgc-grey">
+                <div class="container clearfix">
+
+                    <div class="w-30 float-left">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-globe-americas"></i>
+                                    English
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <span class="vl"></span>
+                            </li>
+                            <li>
+                                <a href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="w-70 float-left text-r">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#">
+                                    <i class="c-azure fas fa-search"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="btn c-orange bgc-white" href="#">Log in</a>
+                            </li>
+                            <li>
+                                <a class="btn c-white bgc-orange" href="#">GetHubspotFree</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <div id="static_nav" class="bgc-white">
+                <div class="container clearfix">
+
+                    <div class="w-30 float-left">
+                        <div class="logo">
+                            <img src="img/logo.svg" alt="HubSpot Logo">
+                        </div>
+                    </div>
+
+                    <div class="w-70 float-left text-r">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#">
+                                    Software
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Resources
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Partners
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    About
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
+
+        <div class="jumbotron bgc-lightor2">
+
+        </div>
+
+        <footer class="bgc-lightgre"></footer>
+
+    </header>
+
 
     <main></main>
 
