aggiunto testo jumbotron

--- a/index.html
+++ b/index.html
@@ -106,7 +106,21 @@
         </nav>
 
         <div class="jumbotron bgc-lightor2">
+            <div class="container">
 
+                <div class="w-50 jumbotron-text">
+                    <h1>There's a better way to grow.</h1>
+                    <p>
+                        Marketing, sales, and service software that helps your business grow without compromise. Because
+                        “good for the business” should also mean “good for the customer.”
+                    </p>
+                    <a href="#" class="btn btn-lg c-white bgc-orange">GetHubspotFree</a>
+                    <p class="text-sm">
+                        Get started with FREE tools, and upgrade as you grow.
+                    </p>
+                </div>
+
+            </div>
         </div>
 
         <footer class="bgc-lightgre"></footer>
