--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-
+        <!-- sezione contenente navbar fixed e navbar static -->
         <nav>
             <div id="fixed_nav" class="bgc-grey">
                 <div class="container clearfix">
@@ -105,6 +105,7 @@
             </div>
         </nav>
 
+        <!-- sezione contenente jumbotron -->
         <div class="jumbotron bgc-lightor2">
             <div class="container">
 
@@ -123,12 +124,21 @@
             </div>
         </div>
 
+        <!-- footer colorato -->
         <footer class="bgc-lightgre"></footer>
 
     </header>
 
 
-    <main></main>
+    <main>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+    </main>
 
     <footer></footer>
 
