aggiunto contenuto main sezione iniziale

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+    <!-- testata della pagina con navbar e jumbotron -->
     <header>
         <!-- sezione contenente navbar fixed e navbar static -->
         <nav>
@@ -25,17 +26,17 @@
 
                     <div class="w-30 float-left">
                         <ul class="list-inline">
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     <i class="fas fa-globe-americas"></i>
                                     English
                                     <i class="fas fa-chevron-down"></i>
                                 </a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <span class="vl"></span>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a href="#">Contact Us</a>
                             </li>
                         </ul>
@@ -43,15 +44,15 @@
 
                     <div class="w-70 float-left text-r">
                         <ul class="list-inline">
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     <i class="c-azure fas fa-search"></i>
                                 </a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a class="btn c-orange bgc-white" href="#">Log in</a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a class="btn c-white bgc-orange" href="#">GetHubspotFree</a>
                             </li>
                         </ul>
@@ -71,28 +72,28 @@
 
                     <div class="w-70 float-left text-r">
                         <ul class="list-inline">
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     Software
                                     <i class="fas fa-chevron-down"></i>
                                 </a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a href="">Pricing</a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     Resources
                                     <i class="fas fa-chevron-down"></i>
                                 </a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     Partners
                                     <i class="fas fa-chevron-down"></i>
                                 </a>
                             </li>
-                            <li>
+                            <li class="ib">
                                 <a href="#">
                                     About
                                     <i class="fas fa-chevron-down"></i>
@@ -115,7 +116,7 @@
                         Marketing, sales, and service software that helps your business grow without compromise. Because
                         “good for the business” should also mean “good for the customer.”
                     </p>
-                    <a href="#" class="btn btn-lg c-white bgc-orange">GetHubspotFree</a>
+                    <a href="#" class="ib btn btn-lg c-white bgc-orange">GetHubspotFree</a>
                     <p class="text-sm">
                         Get started with FREE tools, and upgrade as you grow.
                     </p>
@@ -129,10 +130,207 @@
 
     </header>
 
-
+    <!-- corpo della pagina diviso in tre sezioni -->
     <main>
 
-        <section></section>
+        <!-- prima sezione con sfondo grigio -->
+        <section class="bgc-grey">
+
+            <!-- prima riga -->
+            <div class="container text-c">
+                <div class="w-70 main-title ib">
+
+                    <img src="img/cube.webp" alt="Powerful Alone Better Together">
+                    <h2>Powerful Alone. Better Together</h2>
+                    <p>
+                        HubSpet offers a full stack of software marketing, sales, and costumare service, with a
+                        completly
+                        free CRM at its core. They're powerful alone - but even better when used toghether.
+                    </p>
+
+                </div>
+
+            </div>
+
+            <!-- seconda riga con contenuto singolo centrato -->
+            <div class="container clearfix bgc-white main-single shadow">
+
+                <div class="w-30 float-left text-c main-single-img">
+                    <img src="img/book.svg" alt="">
+                    <a href="" class="ib btn btn-lg c-white bgc-orange">Learn More</a>
+                </div>
+
+                <div class="w-70 float-left main-single-text">
+
+                    <h3>Free HubSpot CRM</h3>
+                    <p class="w-70">
+                        Everything you need to organize, track, and build better relationships with leads and customers.
+                        Yes, it's 100% free. Forever.
+                    </p>
+
+                    <div class="clearfix">
+                        <div class="w-30 float-left text-upper">
+                            <p>
+                                popolar feature
+                            </p>
+                        </div>
+                        <div class="w-70 float-left">
+                            <div class="w-70 ol"></div>
+                        </div>
+                    </div>
+
+                    <ul class="list-inline">
+                        <li class="ib">
+                            <i class="c-orange fas fa-check-circle"></i>
+                            Contact Insight
+                        </li>
+                        <li class="ib">
+                            <i class="c-orange fas fa-check-circle"></i>
+                            Deals
+                        </li>
+                        <li class="ib">
+                            <i class="c-orange fas fa-check-circle"></i>
+                            Task
+                        </li>
+                    </ul>
+
+                </div>
+
+
+            </div>
+
+            <!-- terza riga con 3 colonne centrate -->
+            <div class="container clearfix text-c">
+
+                <!-- prima colonna -->
+                <div class="w-30 main-triple bgc-white float-left shadow">
+
+                    <div class="main-triple-img">
+                        <img src="img/buble.svg" alt="Marketing Hub">
+                    </div>
+
+                    <div class="main-triple-text">
+
+                        <h3>Marketing Hub</h3>
+                        <p>
+                            Marketing software to help you grow traffic, convert more visitors, and run complete inbound
+                            marketing campaigns at scale.
+                        </p>
+                        <hr>
+                        <p class="text-upper">
+                            popolar feature
+                        </p>
+
+                        <div class="text-l">
+                            <ul class="list-inline">
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Lead Generation
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Marketing Automation
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Analytics
+                                </li>
+                            </ul>
+                        </div>
+
+                        <a href="" class="ib btn btn-lg c-white bgc-orange">Learn More</a>
+
+                    </div>
+
+                </div>
+
+                <!-- seconda colonna -->
+                <div class="w-30 main-triple bgc-white float-left shadow">
+
+                    <div class="main-triple-img">
+                        <img src="img/office.svg" alt="Sales Hub">
+                    </div>
+
+                    <div class="main-triple-text">
+
+                        <h3>Sales Hub</h3>
+                        <p>
+                            Sales CRM software to help you get deeper insights into prospects, automate the tasks you
+                            hate, and close more deals faster.
+                        </p>
+                        <hr>
+                        <p class="text-upper">
+                            popolar feature
+                        </p>
+
+                        <div class="text-l">
+                            <ul class="list-inline">
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Email Tracking
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Meeting Scheduling
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Email Automation
+                                </li>
+                            </ul>
+                        </div>
+
+                        <a href="" class="ib btn btn-lg c-white bgc-orange">Learn More</a>
+
+                    </div>
+
+                </div>
+
+                <!-- terza colonna -->
+                <div class="w-30 main-triple bgc-white float-left shadow">
+
+                    <div class="main-triple-img">
+                        <img src="img/table.svg" alt="Service Hub">
+                    </div>
+
+                    <div class="main-triple-text">
+
+                        <h3>Service Hub</h3>
+                        <p>
+                            Customer service software to help you connect with customers, exceed expectations, and turn
+                            them into promoters who grow your business.
+                        </p>
+                        <hr>
+                        <p class="text-upper">
+                            popolar feature
+                        </p>
+
+                        <div class="text-l">
+                            <ul class="list-inline">
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Tickets
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Customer Feedback
+                                </li>
+                                <li>
+                                    <i class="c-orange fas fa-check-circle"></i>
+                                    Knowledge Base
+                                </li>
+                            </ul>
+                        </div>
+
+                        <a href="" class="ib btn btn-lg c-white bgc-orange">Learn More</a>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
 
         <section></section>
 
@@ -140,6 +338,7 @@
 
     </main>
 
+    <!-- footer della pagina -->
     <footer></footer>
 
 </body>
