--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
     <link rel="stylesheet" href="css/style.css">
     <title>HubSpot | Inbound Marketing, Sales, and Service Software</title>
@@ -131,6 +131,7 @@
     </header>
 
     <!-- corpo della pagina diviso in tre sezioni -->
+    <!-- <main class="bgc-grey"> -->
     <main>
 
         <!-- prima sezione con sfondo grigio -->
@@ -175,7 +176,8 @@
                             </p>
                         </div>
                         <div class="w-70 float-left">
-                            <div class="w-70 ol"></div>
+                            <div class="w-70 ol">
+                            </div>
                         </div>
                     </div>
 
@@ -339,7 +341,184 @@
     </main>
 
     <!-- footer della pagina -->
-    <footer></footer>
+    <footer class="c-white clearfix">
+
+        <!-- prima riga contentnte link bottoni -->
+        <section class="container clearfix">
+
+            <!-- prima colonna -->
+            <div class="w-25 float-left">
+
+                <h4>Increase Your Traffic</h4>
+
+                <ul class="list-inline text-sm">
+                    <li>
+                        <a href=" #">Ad Software</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog Software</a>
+                    </li>
+                    <li>
+                        <a href="#">SEO Software</a>
+                    </li>
+                    <li>
+                        <a href="#">Social Media Software</a>
+                    </li>
+                    <li>
+                        <a href="#">Content Management System</a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- seconda colonna -->
+            <div class="w-25 float-left">
+
+                <h4>Connect With Leads</h4>
+
+                <ul class="list-inline text-sm">
+                    <li>
+                        <a href=" #">Find New Prospects</a>
+                    </li>
+                    <li>
+                        <a href="#">Email Tracking</a>
+                    </li>
+                    <li>
+                        <a href="#">Sales Email Templates</a>
+                    </li>
+                    <li>
+                        <a href="#">Click to Call Your Leads</a>
+                    </li>
+                    <li>
+                        <a href="#">Email Marketing</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- terza colonna -->
+            <div class="w-25 float-left">
+
+                <h4>Close and Manage Leads</h4>
+
+                <ul class="list-inline text-sm">
+                    <li>
+                        <a href="#">Document Tracking Tool</a>
+                    </li>
+                    <li>
+                        <a href="#">Meeting Schedule Tool</a>
+                    </li>
+                    <li>
+                        <a href="#">Sales Automation Tool</a>
+                    </li>
+                    <li>
+                        <a href="#">Lead Management Tool</a>
+                    </li>
+                    <li>
+                        <a href="#">Pipeline Management Tool</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- quarta colonna -->
+            <div class="w-25 float-left">
+
+                <h4>Support and Tools</h4>
+
+                <ul class="list-inline text-sm">
+                    <li>
+                        <a href="#">HubSpot Partners</a>
+                    </li>
+                    <li>
+                        <a href="#">Join a Local User Group</a>
+                    </li>
+                    <li>
+                        <a href="#">Get a Free Website Report</a>
+                    </li>
+                    <li>
+                        <a href="#">HubSpot Templates</a>
+                    </li>
+                    <li>
+                        <a href="#">Free Tools <span>&amp;</span> Generators</a>
+                    </li>
+                </ul>
+
+                <div>
+                    <a class="btn btn-ft c-grey bgc-white ib text-sm" href="#">Contact HubSpot Support</a>
+
+                    <div class="text-sm social">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-youtube"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- seconda riga - lingue -->
+        <section class="container text-c lang">
+
+            <a href="#">
+                <h4 class="ib">English</h4>
+            </a>
+
+            <a href="#">
+                <h4 class="ib">Deutsch</h4>
+            </a>
+
+            <a href="#">
+                <h4 class="ib"><span>&#x5143; &#x5143; &#x5143;</span></h4>
+            </a>
+
+            <a href="#">
+                <h4 class="ib">Espa<span>&ntilde;</span>ol</h4>
+            </a>
+
+            <a href="#">
+                <h4 class="ib">Portugu<span>&ecirc;</span>s</h4>
+            </a>
+
+            <a href="#">
+                <h4 class="ib">Fran<span>&ccedil;</span>ais</h4>
+            </a>
+
+        </section>
+
+        <!-- terza riga con logo -->
+        <section class="ft-logo">
+
+            <div class="logo container clearfix">
+
+                <div class="w-50 float-left">
+                    <img src="img/logo-white.svg" alt="HubSpot Logo">
+                    <p class="text-sm">
+                        Copiright <span>&copy;</span> 2019 HubSpot, Inc.
+                    </p>
+
+                </div>
+
+                <div class="w-50 float-left text-r">
+
+                    <ul class="list-inline text-sm">
+                        <li class="ib">
+                            <a href=" #">Legal Stuff</a>
+                        </li>
+                        <li class="ib">
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </section>
+
+    </footer>
 
 </body>
 
