aggiunto contenuto main - prima riga customers

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <main>
 
         <!-- prima sezione con sfondo grigio -->
-        <section class="bgc-grey">
+        <section id="hubs" class="bgc-grey">
 
             <!-- prima riga -->
             <div class="container text-c">
@@ -334,9 +334,71 @@
 
         </section>
 
-        <section></section>
+        <section id="community" class="bgc-gradient"></section>
 
-        <section></section>
+        <section id="customers" class="bgc-white">
+
+            <!-- prima riga -->
+            <div class="container w-70 clearfix">
+
+                <div class="w-30 float-left">
+                    <h2 class="text-lg">64,500</h2>
+                    <p class="w-70">
+                        customers in over 100 countries growing their business with HubSpot
+                    </p>
+                </div>
+
+                <div class="w-70 float-left">
+
+                    <div class="customers-logo clearfix">
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/atlasian.webp" alt="Atlasian Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/doordash.webp" alt="Doordash Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/g2crowd.webp" alt="G2crowd Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/purple.webp" alt="Purple Logo">
+                        </div>
+
+                    </div>
+
+                    <div class="customers-logo clearfix">
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/subaru.webp" alt="Subaru Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/wistia.webp" alt="Wistia Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/classpass.webp" alt="Classpass Logo">
+                        </div>
+
+                        <div class="logo w-25 float-left">
+                            <img src="img/vmware.webp" alt="VMware Logo">
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- seconda riga -->
+            <div class="container">
+            </div>
+
+        </section>
 
     </main>
 
