aggiunto contenuto main - seconda riga customers

--- a/index.html
+++ b/index.html
@@ -395,7 +395,26 @@
             </div>
 
             <!-- seconda riga -->
-            <div class="container">
+            <div class="container clearfix">
+
+                <div class="w-50 float-left customers-text">
+
+                    <h2>Start Growing With HubSpot Today</h2>
+                    <p class="w-70">
+                        With tools to make every part of your process more human and a support team excited to help
+                        you, getting started with inbound has never been easier.
+                    </p>
+                    <a href="#" class="ib btn btn-lg c-white bgc-orange">GetHubspotFree</a>
+                    <p class="text-sm">
+                        Get started with FREE tools, and upgrade as you grow.
+                    </p>
+                    
+                </div>
+
+                <div class="w-50 float-left customers-woman text-r">
+                    <img class="woman" src="img/woman.webp" alt="Woman">
+                </div>
+
             </div>
 
         </section>
