correzione linea orizzontale sezione hubs

--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
                         Yes, it's 100% free. Forever.
                     </p>
 
-                    <div class="clearfix">
+                    <div class="clearfix space">
+                        
                         <div class="w-30 float-left text-upper">
                             <p>
                                 popolar feature
                             </p>
                         </div>
-                        <div class="w-70 float-left">
-                            <div class="w-70 ol">
-                            </div>
-                        </div>
+
+                        <div class="w-50 float-left ol"></div>
+
                     </div>
 
                     <ul class="list-inline">
@@ -408,7 +408,7 @@
                     <p class="text-sm">
                         Get started with FREE tools, and upgrade as you grow.
                     </p>
-                    
+
                 </div>
 
                 <div class="w-50 float-left customers-woman text-r">
