aggiunto contenuto main community

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
 
                     <div class="clearfix space">
-                        
+
                         <div class="w-30 float-left text-upper">
                             <p>
                                 popolar feature
@@ -334,7 +334,78 @@
 
         </section>
 
-        <section id="community" class="bgc-gradient"></section>
+        <section id="community" class="bgc-gradient c-white text-c">
+
+            <div class="container community-title">
+                <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                <p>
+                    You don't have to go it alone. Master the inbound methodology and get the most out of your tools
+                    with HubSpot's legendary customer support team and a community of thousands of marketing and sales
+                    pros just like you.
+                </p>
+            </div>
+
+            <div class="container">
+
+                <div class="community-row clearfix">
+
+                    <div class="box w-25 float-left">
+                        <img src="img/hands.svg" alt="Hands">
+                        <h5 class="text-lg">150+</h5>
+                        <p>HubSpot user groups</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/blogs.svg" alt="HubSpot Blog">
+                        <h5 class="text-lg">4.5M+</h5>
+                        <p>montly visits</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/academy.svg" alt="Academy">
+                        <h5 class="text-lg">155K+</h5>
+                        <p>certified professionals</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/inbound.svg" alt="Inbound">
+                        <h5 class="text-lg">21K+</h5>
+                        <p>registered attendees</p>
+                    </div>
+
+                </div>
+
+                <div class="community-row clearfix">
+
+                    <div class="box w-25 float-left">
+                        <img src="img/connect.svg" alt="HubSpot Connect">
+                        <h5 class="text-lg">200+</h5>
+                        <p>integrations</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/globe.svg" alt="Globe">
+                        <h5 class="text-lg">6+</h5>
+                        <p>languages</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/followers.svg" alt="Followers">
+                        <h5 class="text-lg">2.6M+</h5>
+                        <p>social followers</p>
+                    </div>
+
+                    <div class="box w-25 float-left">
+                        <img src="img/growth.svg" alt="Growth Hub">
+                        <h5 class="text-lg">5K+</h5>
+                        <p>profiles and counting</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
 
         <section id="customers" class="bgc-white">
 
