aggiunto commenti sezioni

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
     </header>
 
     <!-- corpo della pagina diviso in tre sezioni -->
-    <!-- <main class="bgc-grey"> -->
     <main>
 
         <!-- prima sezione con sfondo grigio -->
@@ -334,8 +333,10 @@
 
         </section>
 
+        <!-- seconda sezione con sfondo azzurro -->
         <section id="community" class="bgc-gradient c-white text-c">
 
+            <!-- prima riga con titolo e descrizione -->
             <div class="container community-title">
                 <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
                 <p>
@@ -345,6 +346,7 @@
                 </p>
             </div>
 
+            <!-- seconda riga contenente box centrati  -->
             <div class="container">
 
                 <div class="community-row clearfix">
@@ -407,9 +409,10 @@
 
         </section>
 
+        <!-- terza sezione con sfondo bianco -->
         <section id="customers" class="bgc-white">
 
-            <!-- prima riga -->
+            <!-- prima riga con loghi-->
             <div class="container w-70 clearfix">
 
                 <div class="w-30 float-left">
@@ -465,7 +468,7 @@
 
             </div>
 
-            <!-- seconda riga -->
+            <!-- seconda riga con descrizione e immagine -->
             <div class="container clearfix">
 
                 <div class="w-50 float-left customers-text">
