--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                     </p>
                 </div>
 
+                <!-- <img src="img/jumbotron.png" alt="HubSpot Jumbotron"> -->
+          
             </div>
         </div>
 
@@ -674,7 +676,7 @@
         </section>
 
     </footer>
- 
+
 </body>
 
 </html>
